--- a/landing.css
+++ b/landing.css
@@ -1,26 +1,29 @@
 body {
     background: rgb(119, 47, 198);
-    background: linear-gradient(90deg,rgba(119, 47, 198, 1) 0%, rgba(177, 66, 186, 1) 100%);
+    background: linear-gradient(rgba(119, 47, 198, 1) 0%, rgba(177, 66, 186, 1) 100%);
 }
 
 .photo {
     float: right;
-    margin-top: 112px;
-    margin-right: 116px;
-    width: 554px;
-    height: 693px;
+    margin: 90px 80px 20px 0px;
+    width: 534px;
+    height: 685px;
     background: url(./photo\ 1\ 1.jpg);
     border-radius: 67px;
 }
 
 .element {
-    width: 1066px;
-    height: 1066px;
-    left: 659px;
-    top: 142px;
-    background: url(./Elements\ 1.jpg);
-    border: 3px solid black;
-    background-color: transparent;
+    position: absolute;
+    width: 900px;
+    height: 740px;
+    left: 630px;
+    top: 55px;
+    /* border: 2px solid black; */
+    background-image: url(./Elements_1-removebg-preview.png), linear-gradient(rgba(119, 47, 198, 1) 0%, rgba(177, 66, 186, 1) 100%);
+    background-size: contain;
+    background-blend-mode: soft-light;
+    background-repeat: no-repeat;
+    z-index: -1;
 }
 
 .text {
@@ -28,16 +31,16 @@ body {
     width: 856px;
     height: 472px;
     left: 116px;
-    top: 201px;
+    top: 100px;
 
 }
 
 .text>h1 {
-    font-family: 'Poppins';
-    font-style: normal;
+    font-family: 'georgia';
+    font-style: bold;
     font-weight: 700;
     font-size: 120px;
-    line-height: 20px;
+    line-height: 15px;
     color: #FFFFFF;
 
 }
@@ -47,11 +50,11 @@ body {
     width: 700px;
     height: 82px;
     left: 116px;
-    top: 690px;
+    top: 570px;
 }
 
 .quote>h2 {
-    font-family: 'Poppins';
+    font-family: 'georgia';
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -66,23 +69,24 @@ button {
     width: 344px;
     height: 78px;
     left: 116px;
-    top: 800px;
+    top: 680px;
     background-color: transparent;
     border: 2px solid #FFFFFF;
     border-radius: 39px;
-    margin-bottom: 171px;
+
 }
 
 button>p {
-    font-family: 'Poppins';
+    font-family: 'georgia';
     font-style: normal;
     font-weight: 700;
-    font-size: 23px;
+    font-size: 20px;
     line-height: 34px;
     color: #FFFFFF;
 }
-button:hover{
-    background: rgb(119, 47, 198);
-    background: linear-gradient(90deg,rgba(119, 47, 198, 1) 0%, rgba(177, 66, 186, 1) 100%);
+
+button:hover {
+    background:  rgb(119, 47, 198),linear-gradient(90deg, rgba(119, 47, 198, 1) 0%, rgba(177, 66, 186, 1) 100%);
     cursor: pointer;
+    mix-blend-mode: soft-light;
 }
