--- a/landing.css
+++ b/landing.css
@@ -4,8 +4,11 @@ body {
 }
 
 .photo {
-    float: right;
-    margin: 90px 80px 20px 0px;
+    position: absolute;
+    top: 55px;
+    right: 116px;
+    bottom: 175px;
+    left: 1050px;
     width: 534px;
     height: 685px;
     background: url(./photo\ 1\ 1.jpg);
@@ -21,7 +24,7 @@ body {
     /* border: 2px solid black; */
     background-image: url(./Elements_1-removebg-preview.png), linear-gradient(rgba(119, 47, 198, 1) 0%, rgba(177, 66, 186, 1) 100%);
     background-size: contain;
-    background-blend-mode: soft-light;
+    /* background-blend-mode: soft-light; */
     background-repeat: no-repeat;
     z-index: -1;
 }
@@ -36,7 +39,7 @@ body {
 }
 
 .text>h1 {
-    font-family: 'georgia';
+    font-family: "Poppins", sans-serif;
     font-style: bold;
     font-weight: 700;
     font-size: 120px;
@@ -54,7 +57,7 @@ body {
 }
 
 .quote>h2 {
-    font-family: 'georgia';
+    font-family: "Poppins", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -64,7 +67,6 @@ body {
 
 button {
     box-sizing: border-box;
-
     position: absolute;
     width: 344px;
     height: 78px;
@@ -77,7 +79,7 @@ button {
 }
 
 button>p {
-    font-family: 'georgia';
+    font-family: "Poppins", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -86,7 +88,7 @@ button>p {
 }
 
 button:hover {
-    background:  rgb(119, 47, 198),linear-gradient(90deg, rgba(119, 47, 198, 1) 0%, rgba(177, 66, 186, 1) 100%);
+    background: rgb(119, 47, 198), linear-gradient(90deg, rgba(119, 47, 198, 1) 0%, rgba(177, 66, 186, 1) 100%);
     cursor: pointer;
     mix-blend-mode: soft-light;
 }
