--- a/navbar.css
+++ b/navbar.css
@@ -26,7 +26,12 @@
 
 }
 
-/* navbar */
+nav{
+    padding: 15px 0px;
+    position: sticky;
+    top: 0px;
+}
+
 .ai-kbi {
     color: var(--picton-blue);
     font-size: 60px;
@@ -34,20 +39,17 @@
     font-weight: 700;
     letter-spacing: 0;
     position: absolute;
-    top: 5px;
+    top: 0px;
     text-align: center;
     width: 167px;
     left: 30px;
 }
 
-html {
-    margin: 0px;
-    padding: 0px;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 
-}
-
-body {
-    overflow-x: hidden;
 }
 
 .place {
@@ -55,12 +57,12 @@ body {
     color: var(--black);
     font-family: var(--font-family-poppins);
     font-size: var(--font-size-s);
-    font-weight: 500;
-    left: 945px;
+    font-weight:500;
+    left: 1052px;
     letter-spacing: 0;
     position: absolute;
     text-align: center;
-    top: 29px;
+    top: 23px;
     /* border: 3px solid black; */
 }
 
@@ -68,49 +70,60 @@ body {
     color: var(--black);
     font-family: var(--font-family-poppins);
     font-size: var(--font-size-s);
-    font-weight: 500;
-    left: 1090px;
+    font-weight:500;
+    left: 1197px;
     letter-spacing: 0;
     position: absolute;
     text-align: center;
-    top: 29px;
+    top: 23px;
 }
 
 .news-events {
     color: var(--black);
     font-family: var(--font-family-poppins);
     font-size: var(--font-size-s);
-    font-weight: 500;
-    left: 1253px;
+    font-weight:500;
+    left: 1361px;
     letter-spacing: 0;
     position: absolute;
     text-align: center;
-    top: 29px;
+    top: 23px;
 }
 
 .button-1 {
+    color: var(--picton-blue);
     font-family: var(--font-family-poppins);
-    font-size: 22px;
-    font-weight: 700;
+    font-size: 20px;
+    font-weight: 500;
     border-radius: 20px;
     box-shadow: 3px 4px 32px #00000040;
     height: 64px;
-    left: 1520px;
+    left: 1634px;
     position: absolute;
-    text-align: center;
+    top: 10px;
     width: 223px;
-    border: 3px solid var(--picton-blue);
-    top: 15px;
+    background-color: var(--white);
+    border: 3px solid var(--picton-blue)
+}
+
+.button-1:hover{
     color: white;
     background-color: var(--picton-blue);
 }
 
-.button-1:hover {
+.get-incubated {
     color: var(--picton-blue);
-    background-color: var(--white);
+    font-family: var(--font-family-poppins);
+    font-size: 21px;
+    font-weight: 600;
+    letter-spacing: 0;
+    left: 1639px;
+    position: absolute;
+    text-align: center;
+    top: 15px;
+    width: 218px;
 }
 
-/* main frame */
 .frame-2 {
     align-items: flex-start;
     background-color: var(--white);
@@ -276,7 +289,7 @@ body {
     left: 0;
     position: absolute;
     top: 84px;
-    width: 100%;
+    width: 1920px;
     /*changable*/
 }
 
@@ -286,15 +299,13 @@ body {
     font-family: var(--font-family-dm_sans);
     font-size: 196px;
     font-weight: 700;
-    left: 134px;
+    left: 142px;
     letter-spacing: 0;
     line-height: 209px;
     /* opacity: 0; */
     position: absolute;
-    top: 80px;
+    top: 279px;
     transform: scale(1.1);
-    width: 504px;
-    height: 326px;
 }
 
 .start-develope-grow.bp1-animate-enter2 {
@@ -309,12 +320,11 @@ body {
 
 /* Working */
 .group {
-    height: 99px;
+    height: 153px;
     left: 0;
     position: absolute;
-    top: 1052px;
-    width: 188px;
-    z-index: 2;
+    top: 882px;
+    width: 278px;
 }
 
 /* working */
@@ -325,8 +335,8 @@ body {
     object-fit: cover;
     /* opacity: 0; */
     position: absolute;
-    top: 386px;
-    /* width: 627px; */
+    top: 486px;
+    /* width: 727px; */
     transform: scale(1.1);
 }
 
@@ -340,14 +350,14 @@ body {
     letter-spacing: 0;
     position: absolute;
     text-align: center;
-    top: 777px;
+    top: 877px;
     width: 343px;
 }
 
 /* not working */
 .group-1 {
     height: 232px;
-    left: 1695px;
+    left: 1817px;
     position: absolute;
     top: 07px;
     width: 103px;
@@ -355,14 +365,14 @@ body {
 }
 
 .photo-1-1 {
-    height: 596px;
+    height: 823px;
     /* display: block; */
-    left: 1250px;
+    left: 1277px;
     object-fit: cover;
     /* opacity: 0; */
     position: absolute;
-    top: 103px;
-    width: 500px;
+    top: 101px;
+    width: 591px;
     transform: scale(1.1);
 }
 
@@ -379,12 +389,12 @@ body {
 
 /* working */
 .photo-2-1 {
-    height: 486px;
-    left: 59px;
+    height: 510px;
+    left: 63px;
     object-fit: cover;
     position: absolute;
     top: 1185px;
-    width: 677px;
+    width: 762px;
 }
 
 .whether-youre-start {
@@ -392,17 +402,17 @@ body {
     font-family: var(--font-family-poppins);
     font-size: var(--font-size-x1);
     font-weight: 500;
-    left: 500px;
+    left: 550px;
     letter-spacing: 0;
     position: absolute;
     text-align: center;
     top: 1799px;
-    width: 827px;
+    width: 927px;
 }
 
 .group-5-2 {
     height: 185px;
-    left: 1257px;
+    left: 1397px;
     object-fit: cover;
     position: absolute;
     top: 1695px;
@@ -411,55 +421,54 @@ body {
 
 .button-2 {
     border-radius: 20px;
-    color: white;
+    color: var(--picton-blue);
     box-shadow: 3px 4px 32px #00000040;
     height: 117px;
-    text-align: center;
-    left: 705px;
+    left: 815px;
     position: absolute;
     top: 2101px;
     width: 397px;
+    background-color: var(--white);
     border: 3px solid var(--picton-blue);
     font-family: var(--font-family-poppins);
     font-size: 27px;
     font-weight: 600;
-    background-color: var(--picton-blue)
 }
 
-.button-2:hover {
-    background-color: var(--white);
-    color: var(--picton-blue);
+.button-2:hover{
+    background-color: var(--picton-blue);
+    color: white;
 }
 
-.photo-3-2 {
-    left: 1267px;
-    object-fit: contain;
+.photo-3-2{
+    height: 492px;
+    left: 1477px;
+    object-fit: cover;
     position: absolute;
-    top: 2165px;
+    top: 2135px;
+    width: 443px;
     z-index: 1;
-    width: 662px;
-    height: 442px;
 }
 
-.group-3 {
+.group-3{
     height: 215px;
-    left: 1290px;
+    left: 1380px;
     position: absolute;
-    top: 2500px;
+    top: 1988px;
     width: 262px;
     z-index: 1;
 }
 
-.rectangle-6 {
+.rectangle-6{
     background-color: var(--picton-blue);
     height: 432px;
     left: 0;
     position: absolute;
     top: 2545px;
-    width: 100%;
+    width: 1920px;
 }
 
-.group-1-1 {
+.group-1-1{
     height: 87px;
     left: 1213px;
     position: absolute;
@@ -467,7 +476,7 @@ body {
     width: 359px;
 }
 
-.success-is-not-final {
+.success-is-not-final{
     color: var(--alabaster);
     font-family: var(--font-family-poppins);
     font-size: var(--font-size-xxx1);
@@ -480,7 +489,7 @@ body {
 
 }
 
-.name {
+.name{
     color: var(--cinnabar);
     font-family: var(--font-family-poppins);
     font-size: var(--font-size-s);
@@ -489,181 +498,265 @@ body {
     left: 1263px;
     position: absolute;
     top: 296px;
+
+}
+.photo41 {
+    position: absolute;
+    width: 1034px;
+    height: 1161px;
+    left: -14px;
+    top: 4850px;
+    z-index:5;
+}
+.rectangle17 {
+    position: absolute;
+    width: 120px;
+    height: 118px;
+    left: 960px;
+    top: 5305px;
+    background: #F8202E;
+    border-radius: 25px;
+    z-index:5;
+}
+.tick1{
+    position: absolute;
+    width: 68px;
+    height: 51px;
+    left: 986px;
+    top: 5338px;
+    z-index:5;
+}
+.rectangle18{
+    position: absolute;
+    width: 120px;
+    height: 118px;
+    left: 960px;
+    top: 5511px;
+    background: #F8202E;
+    border-radius: 25px;
+    z-index:5;
+}
+.tick2{
+    position: absolute;
+    width: 68px;
+    height: 51px;
+    left: 986px;
+    top: 5544px;
+    z-index:5;
+}
+.rectangle19{
+    position: absolute;
+    width: 120px;
+    height: 118px;
+    left: 960px;
+    top: 5717px;
+    background: #F8202E;
+    border-radius: 25px;
+    z-index:5;
+}
+.tick3{
+    position: absolute;
+    width: 68px;
+    height: 51px;
+    left: 986px;
+    top: 5750px;
+    z-index:5;
+}
+.learn{
+    position: absolute;
+    width: 651px;
+    height: 374px;
+    left: 1111px;
+    top: 4500px;
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 72px;
+    line-height: 132px;
+    /* or 115% */
+    color: #155FEA;
+}
+.expert{
+    position: absolute;
+    width: 590px;
+    height: 41px;
+    left: 1121px;
+    top: 5200px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 51px;
+
+    color: #FFC95F;
+}
+.keep{
+    position: absolute;
+    width: 590px;
+    height: 84px;
+    left: 1121px;
+    top: 5300px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+
+    color: #000000;
+}
+.group{
+    position: absolute;
+    width: 616px;
+    height: 41px;
+    left: 1121px;
+    top: 5400px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 51px;
+
+    color: #FFC95F;
+}
+.guide{
+    position: absolute;
+    width: 615px;
+    height: 84px;
+    left: 1121px;
+    top: 5490px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+
+    color: #000000;
+}
+.interaction{
+    position: absolute;
+    width: 615px;
+    height: 41px;
+    left: 1121px;
+    top: 5600px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 51px;
+
+    color: #FFC95F;
+    }
+.connect{
+    position: absolute;
+    width: 615px;
+    height: 84px;
+    left: 1121px;
+    top: 5730px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+
+    color: #000000;
+    }
+.rectangle13{
+    position: absolute;
+    width: 1936px;
+    height: 416px;
+    left: -16px;
+    top: 5970px;
+
+    background: #155FEA;
+}
+.for{
+    position: absolute;
+    width: 1100px;
+    height: 68px;
+    left: 150px;
+    top: 6150px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 84px;
+
+    color: #FAFAFA;
+}
+.elements53{
+    position: absolute;
+    width: 102px;
+    height: 109px;
+    left: 1710px;
+    top: 6060px;
+    }
+
+/*
+.rectangle20{
+    position: absolute;
+    width: 353px;
+    height: 105px;
+    left: 1450px;
+    top: 6150px;
+
+    background: #FFFFFF;
+    border-radius: 20px;
+}
+.clickhere{
+    position: absolute;
+    width: 200px;
+    height: 32px;
+    left: 1532px;
+    top: 6180px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 40px;
+    text-align: center;
+
+    color: #EA4335;
+}
+*/
+
+.button-Click {
+    color: var(--picton-blue);
+    font-family: 'Poppins';
+    font-size: 30px;
+    font-weight: 500;
+    border-radius: 20px;
+    box-shadow: 3px 4px 32px #00000040;
+    position: absolute;
+    width: 353px;
+    height: 105px;
+    left: 1400px;
+    top: 6130px;
+    background-color: #FAFAFA;
+    border: 3px solid red;
 }
 
+.button-Click:hover{
+    color: black;
+    background-color: rgb(242, 195, 6);
+}
 
-
-/* 1366x768 */
-
-@media screen and (max-width:1366px) {
-    .ai-kbi {
-        width: 125px;
-        height: 53px;
-        font-size: 45px;
-        left: 52px;
-        top: 10px;
-    }
-
-    .place {
-        width: 60px;
-        height: 24px;
-        left: 704px;
-        top: 30px;
-        font-size: 20px;
-        text-align: center;
-    }
-
-    .explore {
-        width: 73px;
-        height: 22px;
-        left: 819px;
-        top: 30px;
-        font-size: 20px;
-    }
-
-    .news-events {
-        width: 146px;
-        height: 22px;
-        left: 947px;
-        top: 30px;
-        font-size: 20px;
-    }
-
-    .button-1 {
-        width: 163px;
-        height: 47px;
-        left: 1148px;
-        top: 22px;
-        font-size: 15px;
-    }
-
-    .start-develope-grow {
-        width: 504px;
-        height: 326px;
-        left: 134px;
-        top: 128px;
-        font-size: 120px;
-        line-height: 120px;
-    }
-
-    .photo-1-1 {
-        width: 470px;
-        height: 596px;
-        left: 839px;
-        top: 62px;
-
-    }
-
-    .element-1 {
-        width: 574px;
-        height: 283px;
-        left: 296px;
-        top: 465px;
-    }
-
-    .empowering-incubator {
-        width: 268px;
-        height: 85px;
-        left: 462px;
-        top: 584px;
-        font-size: 22px;
-    }
-
-    .rectangle-2 {
-        width: 1366px;
-        height: 857px;
-        left: 0px;
-        top: 81px;
-    }
-
-    /* have to check */
-    .group-1 {
-        left: 1350px;
-        top: 284px;
-
-    }
-
-    .photo-2-1 {
-        width: 577px;
-        height: 386px;
-        left: 59px;
-        top: 893px;
-
-    }
-
-    .group {
-        width: 168px;
-        height: 98px;
-        top: 769px;
-        left: 0px;
-    }
-
-    .whether-youre-start {
-        width: 698px;
-        height: 167px;
-        left: 334px;
-        top: 1381px;
-        font-size: 29px;
-    }
-
-    .group-5-2 {
-        width: 112px;
-        height: 120px;
-        left: 989px;
-        top: 1316px;
-    }
-
-    .button-2 {
-        width: 308px;
-        height: 90.77px;
-        left: 529px;
-        top: 1606px;
-        font-size: 21px;
-    }
-
-    .photo-3-2 {
-        width: 662px;
-        height: 442px;
-        left: 865px;
-        top: 1647px;
-
-    }
-
-    .rectangle-6 {
-        width: 1366px;
-        height: 330px;
-        left: 0px;
-        top: 2028px;
-    }
-
-    .group-3 {
-        height: 205px;
-        width: 242px;
-        left: 888px;
-        top: 1972px;
-    }
-
-    .success-is-not-final {
-        width: 812px;
-        height: 108px;
-        left: 105px;
-        top: 111px;
-        font-size: 37px;
-    }
-
-    .group-1-1 {
-        width: 289px;
-        height: 97px;
-        left: 867px;
-        position: absolute;
-        top: 199px;
-    }
-
-    .name {
-        font-size: 25px;
-        width: 223px;
-        height: 36px;
-        left: 900px;
-        top: 219px;
-    }
+.clickhere {
+    color: var(--picton-blue);
+    font-family: var(--font-family-poppins);
+    font-size: 21px;
+    font-weight: 600;
+    letter-spacing: 0;
+    left: 1572px;
+    position: absolute;
+    text-align: center;
+    top: 6130px;
+    width: 200px;
 }
