--- a/index.css
+++ b/index.css
@@ -38,6 +38,7 @@
     text-align: center;
     width: 167px;
     left: 30px;
+    text-decoration: none;
 }
 
 html {
@@ -46,9 +47,9 @@ html {
 
 }
 
-body {
+/* body {
     overflow-x: hidden;
-}
+} */
 
 .place {
     text-align: center;
@@ -64,7 +65,7 @@ body {
     /* border: 3px solid black; */
 }
 
-.explore {
+.explore-nav {
     color: var(--black);
     font-family: var(--font-family-poppins);
     font-size: var(--font-size-s);
@@ -295,6 +296,16 @@ body {
     transform: scale(1.1);
     width: 504px;
     height: 326px;
+    z-index: 1;
+}
+
+.underline {
+    width: 785px;
+    height: 34.38px;
+    position: absolute;
+    left: 134px;
+    top: 479px;
+    z-index: 0;
 }
 
 .start-develope-grow.bp1-animate-enter2 {
@@ -491,9 +502,508 @@ body {
     top: 296px;
 }
 
+/* News And events*/
+.photo41 {
+    position: absolute;
+    width: 1034px;
+    height: 1161px;
+    left: -14px;
+    top: 4550px;
+    z-index: 5;
+}
 
+.rectangle17 {
+    position: absolute;
+    width: 120px;
+    height: 118px;
+    left: 960px;
+    top: 5005px;
+    background: #F8202E;
+    border-radius: 25px;
+    z-index: 5;
+}
+
+.tick1 {
+    position: absolute;
+    width: 68px;
+    height: 51px;
+    left: 986px;
+    top: 5038px;
+    z-index: 5;
+}
+
+.rectangle18 {
+    position: absolute;
+    width: 120px;
+    height: 118px;
+    left: 960px;
+    top: 5211px;
+    background: #F8202E;
+    border-radius: 25px;
+    z-index: 5;
+}
+
+.tick2 {
+    position: absolute;
+    width: 68px;
+    height: 51px;
+    left: 986px;
+    top: 5244px;
+    z-index: 5;
+}
+
+.rectangle19 {
+    position: absolute;
+    width: 120px;
+    height: 118px;
+    left: 960px;
+    top: 5417px;
+    background: #F8202E;
+    border-radius: 25px;
+    z-index: 5;
+}
+
+.tick3 {
+    position: absolute;
+    width: 68px;
+    height: 51px;
+    left: 986px;
+    top: 5450px;
+    z-index: 5;
+}
+
+.learn H1 {
+    position: absolute;
+    font-family: var(--font-family-dm_sans);
+    color: var(--picton-blue);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 115px;
+    line-height: 132px;
+    width: 651px;
+    height: 374px;
+    left: 1111px;
+    top: 4519px;
+}
+
+.events-underline {
+    position: absolute;
+    width: 351.88px;
+    height: 17.5px;
+    top: 4756px;
+    left: 1121px;
+}
+
+.expert {
+    position: absolute;
+    width: 590px;
+    height: 41px;
+    left: 1121px;
+    top: 4990px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 51px;
+
+    color: #FFC95F;
+}
+
+.keep {
+    position: absolute;
+    width: 590px;
+    height: 84px;
+    left: 1121px;
+    top: 5050px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+
+    color: #000000;
+}
+
+.group-to-group {
+    position: absolute;
+    width: 616px;
+    height: 41px;
+    left: 1121px;
+    top: 5190px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 51px;
+
+    color: #FFC95F;
+}
+
+.guide {
+    position: absolute;
+    width: 615px;
+    height: 84px;
+    left: 1121px;
+    top: 5250px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+
+    color: #000000;
+}
+
+.interaction {
+    position: absolute;
+    width: 615px;
+    height: 41px;
+    left: 1121px;
+    top: 5390px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 51px;
+
+    color: #FFC95F;
+}
+
+.connect {
+    position: absolute;
+    width: 615px;
+    height: 84px;
+    left: 1121px;
+    top: 5495px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+
+    color: #000000;
+}
+
+.rectangle13 {
+    position: absolute;
+    width: 100%;
+    height: 416px;
+    top: 5670px;
+
+    background: #155FEA;
+}
+
+.for-latest-news {
+    position: absolute;
+    width: 889px;
+    height: 72px;
+    left: 150px;
+    top: 5850px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 56px;
+    line-height: 84px;
+    color: #FAFAFA;
+}
+
+.elements53 {
+    position: absolute;
+    width: 102px;
+    height: 109px;
+    left: 1630px;
+    top: 5760px;
+}
+
+.button-Click {
+    color: var(--picton-blue);
+    font-family: var(--font-family-poppins);
+    font-size: 30px;
+    font-weight: 500;
+    border-radius: 20px;
+    box-shadow: 3px 4px 32px #00000040;
+    position: absolute;
+    width: 353px;
+    height: 105px;
+    left: 1300px;
+    top: 5830px;
+    background-color: #FAFAFA;
+    color: red;
+}
+
+.button-Click:hover {
+    color: black;
+    border: 5px solid red;
+}
+
+.clickhere {
+    color: var(--picton-blue);
+    font-family: var(--font-family-poppins);
+    font-size: 21px;
+    font-weight: 600;
+    letter-spacing: 0;
+    left: 1572px;
+    position: absolute;
+    text-align: center;
+    top: 6130px;
+    width: 200px;
+}
+
+
+/* Slider */
+.startup-title h1 {
+    position: absolute;
+    width: 1116px;
+    height: 70px;
+    left: 402px;
+    top: 3149px;
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 103px;
+    line-height: 134px;
+    text-align: center;
+    color: #F8202E;
+    z-index: 1;
+}
+
+.yellow-underline {
+    position: absolute;
+    Width: 382.01px;
+    height: 19px;
+    top: 3251px;
+    left: 1115.87px;
+    z-index: 0;
+}
+
+.carousel {
+    position: absolute;
+    width: 1898px;
+    height: 544px;
+    left: 22px;
+    top: 3394px;
+}
+
+.container {
+    width: 1008px;
+    height: 544px;
+    background: #155FEA;
+    box-shadow: 3px 4px 38px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 31px;
+}
+
+.title {
+    position: relative;
+    width: 526px;
+    height: 68px;
+    left: 62px;
+    top: 95px;
+    /* border: 3px solid black; */
+}
+
+.title h1 {
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 55px;
+    text-transform: uppercase;
+    /* line-height: 68px; */
+    text-align: center;
+    color: #FFC95F;
+}
+
+.content {
+    position: relative;
+    width: 624px;
+    height: 225px;
+    left: 62px;
+    top: 177px;
+    /* border: 3px solid black; */
+}
+
+.content p {
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    /* line-height: 45px; */
+    padding-left: 33px;
+    padding-bottom: 3rem;
+    color: #FFFFFF;
+
+}
+
+.image {
+    position: relative;
+    width: 459px;
+    height: 448px;
+    left: 800px;
+    bottom: 250px;
+    /* border: 3px solid black; */
+    box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 31px;
+}
+
+/* carousel-control-prev-icon{
+    background-color: black;
+}
+
+.carousel-control-next-icon{
+    color: black;
+}. */
+
+.button-explore {
+    position: absolute;
+    width: 397px;
+    height: 117px;
+    left: 787px;
+    top: 4089px;
+    background: #155FEA;
+    box-shadow: 3px 4px 32px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 40px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #FAFAFA;
+}
+
+.button-explore:hover {
+    color: var(--picton-blue);
+    background-color: var(--white);
+    border: 3px solid var(--picton-blue);
+}
+
+
+/*footer*/
+
+.aikbifooter {
+    position: absolute;
+    width: 608px;
+    height: 237px;
+    left: 656px;
+    top: 6183px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 215px;
+    line-height: 322px;
+    text-align: center;
+
+    color: #155FEA;
+}
+
+.Homefooter {
+    position: absolute;
+    width: 117px;
+    height: 44px;
+    left: 466px;
+    top: 6520px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 37px;
+    line-height: 56px;
+
+    color: #000000;
+}
+
+.Explorefooter {
+    position: absolute;
+    width: 139px;
+    height: 44px;
+    left: 647px;
+    top: 6520px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 37px;
+    line-height: 56px;
+
+    color: #000000;
+}
+
+.newseventsfooter {
+    position: absolute;
+    width: 276px;
+    height: 44px;
+    left: 850px;
+    top: 6520px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 37px;
+    line-height: 56px;
+
+    color: #000000;
+}
+
+.getincubatedfooter {
+    position: absolute;
+    width: 276px;
+    height: 44px;
+    left: 1180px;
+    top: 6520px;
+
+    font-family: var(--font-family-poppins);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 37px;
+    line-height: 56px;
+
+    color: #000000;
+}
+
+.footer-styles:hover {
+    padding: 5px;
+}
+
+.insta {
+    position: absolute;
+    left: 840px;
+    top: 6650px;
+}
+
+.fb {
+    position: absolute;
+    left: 946.81px;
+    top: 6650px;
+}
+
+.tweet {
+    position: absolute;
+    left: 1052.6px;
+    top: 6650px;
+}
+
+.AIKBIFOOTER {
+    position: absolute;
+    left: 840px;
+    right: 856px;
+    top: 6800px;
+    padding-bottom: 100px;
+}
 
 /* 1366x768 */
+@media (min-width: 768px) {
+    .card img {
+        height: 11em;
+    }
+}
 
 @media screen and (max-width:1366px) {
     .ai-kbi {
@@ -513,12 +1023,19 @@ body {
         text-align: center;
     }
 
-    .explore {
+    .explore-nav {
         width: 73px;
         height: 22px;
         left: 819px;
         top: 30px;
         font-size: 20px;
+    }
+
+    .underline {
+        height: 20px;
+        width: 456.65px;
+        left: 135px;
+        top: 360px;
     }
 
     .news-events {
@@ -578,9 +1095,10 @@ body {
 
     /* have to check */
     .group-1 {
-        left: 1350px;
-        top: 284px;
-
+        height: 170px;
+        width: 220px;
+        left: 1180px;
+        top: 3px;
     }
 
     .photo-2-1 {
@@ -665,5 +1183,323 @@ body {
         height: 36px;
         left: 900px;
         top: 219px;
+    }
+
+    /* Explore Page */
+    .startup-title h1 {
+        width: 880px;
+        height: 83px;
+        left: 243px;
+        top: 2549px;
+        font-size: 81px;
+    }
+
+    .yellow-underline {
+        height: 15.96px;
+        width: 321px;
+        left: 801px;
+        top: 2583px;
+
+    }
+
+    .carousel {
+        width: 100%;
+        height: 404px;
+        left: 22px;
+        top: 2752px;
+    }
+
+    .container {
+        width: 800px;
+    }
+
+    .container .title {
+        width: 370px;
+        height: 50px;
+    }
+
+    .container .title h1 {
+        font-size: 37px;
+    }
+
+    .container .content {
+        width: 394.88px;
+        height: 207.1px;
+    }
+
+    .container .content p {
+        font-size: 22px;
+    }
+
+    .container .image {
+        bottom: 210px;
+        left: 630px;
+
+    }
+
+    .image img {
+        height: 100%;
+        width: 100%;
+    }
+
+    .button-explore {
+        width: 304px;
+        height: 89.59px;
+        font-size: 22px;
+        left: 531px;
+        top: 3411px;
+    }
+
+    .photo41 {
+        width: 699px;
+        height: 818px;
+        left: -5px;
+        top: 3758px;
+    }
+
+    .photo41 img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .rectangle17 {
+        width: 94px;
+        height: 93px;
+        left: 647px;
+        top: 4080px;
+    }
+
+    .tick1 {
+        width: 47px;
+        height: 36px;
+        left: 663px;
+        top: 4103px;
+    }
+
+    .rectangle18 {
+        width: 94px;
+        height: 93px;
+        left: 647px;
+        top: 4224px;
+    }
+
+    .tick2 {
+        width: 47px;
+        height: 36px;
+        left: 663px;
+        top: 4248px;
+    }
+
+    .rectangle19 {
+        width: 94px;
+        height: 93px;
+        left: 647px;
+        top: 4370px;
+    }
+
+    .tick3 {
+        width: 47px;
+        height: 36px;
+        left: 663px;
+        top: 4393px;
+    }
+
+    .learn h1 {
+        width: 432px;
+        height: 275px;
+        left: 768px;
+        top: 3716px;
+        font-size: 77px;
+        line-height: 97px;
+    }
+
+    .events-underline {
+        height: 12px;
+        width: 241.27px;
+        left: 771px;
+        top: 3893px;
+    }
+
+    .expert {
+        width: 368px;
+        height: 33px;
+        left: 768px;
+        top: 4064px;
+    }
+
+    .expert h1 {
+        font-size: 30px;
+        line-height: 45px;
+    }
+
+    .keep {
+        width: 496px;
+        height: 66px;
+        left: 768px;
+        top: 4111px;
+    }
+
+    .keep p {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .group-to-group {
+        width: 434px;
+        height: 37px;
+        left: 768px;
+        top: 4207px;
+    }
+
+    .group-to-group h1 {
+        font-size: 30px;
+        line-height: 45px;
+    }
+
+    .guide {
+        width: 508px;
+        height: 67px;
+        left: 768px;
+        top: 4258px;
+    }
+
+    .guide p {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .interaction {
+        width: 512px;
+        height: 32px;
+        left: 768px;
+        top: 4355px;
+    }
+
+    .interaction h1 {
+        font-size: 30px;
+        line-height: 45px;
+    }
+
+    .connect {
+        width: 539px;
+        height: 66px;
+        left: 768px;
+        top: 4401px;
+    }
+
+    .connect p {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .rectangle13 {
+        width: 1366px;
+        height: 308px;
+        left: 0px;
+        top: 4543px;
+    }
+
+    .for-latest-news {
+        width: 766px;
+        height: 52px;
+        left: 225px;
+        top: 4675px;
+    }
+
+    .for-latest-news h1 {
+        font-size: 40px;
+        line-height: 60px;
+    }
+
+    .button-Click {
+        width: 209px;
+        height: 62.17px;
+        left: 932px;
+        top: 4675px;
+        font-size: 20px;
+    }
+
+    .elements53 {
+        width: 50px;
+        height: 54px;
+        left: 1109px;
+        top: 4602px;
+    }
+
+    .button-Click:hover {
+        border: 2px solid red;
+    }
+
+    .aikbifooter {
+        width: 487px;
+        height: 196px;
+        left: 440px;
+        top: 4908px;
+        font-size: 180px;
+        line-height: 270px;
+    }
+
+    .Homefooter {
+        width: 90px;
+        height: 33px;
+        left: 280px;
+        top: 5186px;
+        font-size: 30px;
+    }
+
+    .Explorefooter {
+        width: 108px;
+        height: 33px;
+        left: 427px;
+        top: 5183px;
+        font-size: 30px;
+    }
+
+    .newseventsfooter {
+        width: 217px;
+        height: 30px;
+        left: 592px;
+        top: 5186px;
+        font-size: 30px
+    }
+
+    .getincubatedfooter {
+        width: 220px;
+        height: 33px;
+        left: 866px;
+        top: 5186px;
+        font-size: 30px;
+    }
+
+    .insta {
+        height: 38.27px;
+        width: 37.88px;
+        left: 577px;
+        top: 5298px;
+    }
+
+    .fb {
+        height: 38.27px;
+        width: 37.04px;
+        left: 665.39px;
+        top: 5298px;
+    }
+
+    .tweet {
+        height: 32.18px;
+        width: 37.04px;
+        left: 752.95px;
+        top: 5301.40px;
+    }
+
+    .AIKBIFOOTER {
+        width: 190px;
+        height: 38px;
+        left: 588px;
+        top: 5444px;
+    }
+
+    .footer-styles:hover{
+        font-size: 25px;
     }
 }
