--- a/knowmore.css
+++ b/knowmore.css
@@ -120,3 +120,10 @@ header{
     height: 815px;
     box-shadow: drop-shadow(3px 4px 32px rgba(0, 0, 0, 0.25));
 }
+
+@media screen and (max-width:1920px) {
+    .frame1,.frame2,.frame3,.frame4,.frame5{
+        justify-content: center;
+        align-items: center;
+    }
+}
