added h1 and p tag as change.

--- a/Landing_Page/Landing_Page/AIKBI/templates/index.html
+++ b/Landing_Page/Landing_Page/AIKBI/templates/index.html
@@ -11,6 +11,14 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <h1>Changes Made</h1>
+    <p>
+This paragraph
+contains a lot of lines
+in the source code,
+but the browser
+ignores it.
+</p>
     <nav class="flex flex-col md:flex-row lg:justify-between px-10 pt-4 pb-4">
         <div class="flex justify-between">
             <h1 class="font-bold lg:mt-3 text-blue-700 text-3xl lg:text-5xl lg:text-left">AiKBI</h1>
