changes made in knowmore.html
added div and p tag

--- a/Landing_Page/Landing_Page/AIKBI/templates/knowmore.html
+++ b/Landing_Page/Landing_Page/AIKBI/templates/knowmore.html
@@ -39,7 +39,12 @@
         </nav>
     </header>
 
-
+<div class="div01">
+  <h2>This is a heading in a div element</h2>
+  <p>This is some text in a div element.</p>
+</div>
+    <p>hello i am paragrap tag </p>
+    
     <div class="container-fluid">
         <div class="rows">
             <div class="col-lg-3 "></div>
